[gd_scene load_steps=5 format=3 uid="uid://cygk2ktsrpoat"]

[ext_resource type="Script" path="res://scripts/objects/box_proto.gd" id="1_lxxxv"]
[ext_resource type="Texture2D" uid="uid://brdyh5ph4o3w5" path="res://assets/sprites/test/box2.png" id="2_hr3r4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6tsp"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnfya"]
size = Vector2(1, 15)

[node name="box-proto" type="CharacterBody2D"]
script = ExtResource("1_lxxxv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hr3r4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k6tsp")

[node name="right_area" type="Area2D" parent="."]

[node name="right_box_shape" type="CollisionShape2D" parent="right_area"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_fnfya")

[node name="left_area" type="Area2D" parent="right_area"]

[node name="left_box_shape" type="CollisionShape2D" parent="right_area/left_area"]
position = Vector2(-7.5, 0)
shape = SubResource("RectangleShape2D_fnfya")

[connection signal="body_entered" from="right_area" to="." method="_on_right_area_body_entered"]
[connection signal="body_exited" from="right_area" to="." method="_on_right_area_body_exited"]
[connection signal="body_entered" from="right_area/left_area" to="." method="_on_left_area_body_entered"]
[connection signal="body_exited" from="right_area/left_area" to="." method="_on_left_area_body_exited"]
